# docorganizer

./: .gitignore  Dockerfile  README.md  build.gradle  config.web.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  settings.gradle
.github/workflows/: publish-web-image.yml
chat-rag/: .env.example  Dockerfile  README.md  docker-compose.gpu.yml
chat-rag/app/: main.py  models.py  rag.py
docorg/: ai.py  cli.py  config.py  database.py  date_detector.py  extractor.py  filer.py  pathing.py  processor.py  tui.py  watcher.py  web.py
docs/: requirements.md
gradle/wrapper/: gradle-wrapper.properties
src/main/java/docorganizer/: App.java
src/test/java/docorganizer/: AppTest.java
tests/: test_ai.py  test_date_detector.py  test_dedup_hash.py  test_extractor.py  test_rule_scoring.py  test_watcher.py
