[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docorganizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
    "watchdog>=4.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
]
tui = [
    "textual>=0.60",
]
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
docorg = "docorg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docorg*"]
